# mini-flota-api

./: README.md  pyproject.toml
app/: config.py  database.py  main.py
app/api/v1/endpoints/: auth.py  drivers.py  vehicles.py
app/core/: security.py
app/schemas/: driver.py  vehicle.py
app/services/: driver_service.py  user_service.py  vehicle_service.py
tests/: test_auth.py  test_driver_service.py  test_vehicle_service.py
