[project]
name = "mini-flota-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Cristian Barba",email = "gabrielcristian582@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.50.2,<0.51.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "bcrypt (==4.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
